@@ -2,6 +2,7 @@ Kickstart 4.2.0
 ================================================================================
 + Option to not rename the .htaccess file before extraction. WARNING: MAY BREAK THE EXTRACTION!
 ~ Flatten the design
+~ Reset APC cache after removing the installation directory
 # [LOW] The Import from URL feature couldn't find the Joomla! download URL after the changes made to joomla.org
 
 Kickstart 4.1.4
